# pybc7

./: .gitignore  CMakeLists.txt  README.md  compile.sh  lib.cpp  pybc7.py  pyproject.toml  setup.py  wrapper.cpp
.github/workflows/: build.yml
pybc7/: __init__.py
src/pybc7/: __init__.py
tests/: conftest.py  test_decode.py
tests/data/: cameraman-BC1-NOMIPS.dds
