[project]
name = "pybc7"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [ {name = "Sebastian Aguirre Brachi"}]
requires-python = ">=3.10, <=3.14"
license = {file = "LICENSE"}
keywords = []

dependencies = []

[project.optional-dependencies]

tests = ["pytest"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
